--- a/style.css
+++ b/style.css
@@ -6,6 +6,22 @@ body {
   line-height: 150%;
 }
 
+@media (max-width: 960px) {
+  .container {
+    max-width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  .container {
+    max-width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  .container {
+    max-width: 300px;
+  }
+}
+
 h1, h2, h3 {
   color: #4f4750;
   font-family: 'Ubuntu', sans-serif;
